--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1>My Plans</h1>
             <div class="plans-info-container">
                 <div>
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="">
                     <p class="info-title">
                     <h1>Web Developement</h1>
                     </p>
